--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,24 @@
 {
     "name": "Calculadora de IMC",
     "short_name": "Calc IMC",
+    "icons": [
+        {
+            "src": "images/icon-256.png",
+            "sizes": "256x256",
+            "type": "image/png"
+        },
+        {
+            "src": "images/icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
+            "src": "images/maskable-icon.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
+        }
+    ],
     "lang": "pt-BR",
     "start_url": "/index.html",
     "display": "standalone",
